# undertaleSSM

./: LICENSE  README.md  pyproject.toml  requirements.txt
fileInterface/: dataFileInterface.py  run.py  save.py  saveStateManager.py  types.py  util.py
fileInterface/undertaleReader/: cellphone.py  flags.py  items.py  rooms.py  undertaleDir.py  undertaleFile.py  undertaleIni.py
src/undertaleSSM/: __init__.py  __main__.py
src/undertaleSSM/fileInterface/: __init__.py  dataFileInterface.py  run.py  save.py  saveStateManager.py  types.py  util.py
src/undertaleSSM/fileInterface/undertaleReader/: __init__.py  cellphone.py  flags.py  items.py  rooms.py  undertaleDir.py  undertaleFile.py  undertaleFile.pyi  undertaleIni.py
