[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undertaleSSM"
version = "0.1.0"
description = ""
authors = [
    { name = "RedBugGamer"}
]
requires-python = ">=3.12.6"
dependencies = [
    "dirhash==0.5.0",
    "watchdog==6.0.0",
    "PySide6==6.9.1",
    "PySide6_Addons==6.9.1",
    "PySide6_Essentials==6.9.1"
]

[project.urls]
Homepage = "https://github.com/RedBugGamer/undertaleSSM"